feat: 修改类型定义
